src/App.css
/* ... */
@media screen and (max-width: 1800px) {
  .chat-box-height {
    min-height: 44.5rem !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 40rem !important;
  }
  .msg-text {
    width: 300px !important;
  }
  .banner-text-container {
    width: 540px !important;
  }
}
@media screen and (max-width: 1700px) {
  .chat-box-height {
    min-height: 42.3rem !important;
  }
  .banner-img {
    height: 420px !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 37.7rem !important;
  }
  .msg-text {
    width: 280px !important;
  }
}
@media screen and (max-width: 1600px) {
  .chat-box-height {
    min-height: 39.7rem !important;
  }
  .banner-img-text {
    font-size: 36px !important;
    line-height: 45px !important;
  }
  .banner-para-text {
    font-size: 20px !important;
  }
  .banner-img {
    height: 375px !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 34.7rem !important;
  }
  .msg-text {
    width: 260px !important;
  }
}
@media screen and (max-width: 1500px) {
  .chat-box-height {
    min-height: 37rem !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 32.3rem !important;
  }
  .input-1 {
    width: 73% !important;
  }
  .input-2 {
    width: 25% !important;
  }
  .msg-text {
    width: 240px !important;
  }
}
@media screen and (max-width: 1400px) {
  .chat-box-height {
    min-height: 34.6rem !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 30rem !important;
  }
  .input-1 {
    width: 70% !important;
  }
  .input-2 {
    width: 27% !important;
  }
  .banner-btn {
    width: 300px;
  }
  .banner-text-container {
    width: 480px !important;
  }
  .banner-img-text {
    font-size: 30px !important;
    line-height: 35px !important;
  }
  .banner-para-text {
    font-size: 18px !important;
  }
  .msg-text {
    width: 220px !important;
    font-size: 12px;
  }
  .banner-img {
    height: 335px !important;
    width: 950px !important;
  }
  .input-box {
    bottom: 10px !important;
  }
}
@media screen and (max-width: 1300px) {
  .chat-box-height {
    min-height: 32.3rem !important;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .chat-scroll {
    max-height: 28rem !important;
  }
  .input-1 {
    width: 70% !important;
  }
  .input-2 {
    width: 28% !important;
  }
  .msg-text {
    width: 190px !important;
    font-size: 12px;
  }
  .input-box {
    bottom: 10px !important;
  }
  .inputcc {
    width: 29px !important;
    height: 29px !important;
  }
  .icon-input {
    height: 15px !important;
  }

  .emoji-box {
    /* width: 250px !important; */
    top: -1050% !important;
    left: -1000% !important;
  }
  .banner-img-text {
    font-size: 30px !important;
    line-height: 35px !important;
  }
  .banner-para-text {
    font-size: 18px !important;
  }
  .banner-img {
    height: 315px !important;
  }
  .banner-btn {
    width: 300px;
  }
}
@media screen and (max-width: 1290px) {
  .main-banner-container {
    display: flex;
    flex-direction: column;
    width: 100% !important;
  }
  .banner-text-container {
    width: 100% !important;
    text-align: center !important;
    display: flex;
    flex-direction: column;
    justify-content: center !important;
    margin-bottom: 28px;
  }
  .banner-img-text {
    font-size: 42px !important;
    line-height: 60px !important;
  }
  .banner-para-text {
    font-size: 24px !important;
  }
  .banner-img {
    height: 490px !important;
    width: 860px !important;
    margin: auto;
  }
  .banner-btn {
    margin: auto !important;
    width: 350px !important;
  }
}
@media screen and (max-width: 1200px) {
  .chat-box-height {
    min-height: 30rem !important;
  }
  .mbl-chat {
    width: 100%;
  }
  .inner-chat-box-height {
    max-height: 47rem !important;
  }
  .responsive-container {
    height: 59vh !important;
  }
  .chat-scroll {
    max-height: 25rem !important;
  }
  /* [data-player] {
    width: 100% !important;
    height: 50vh !important;
  } */
  .live-chat-responsive1 {
    width: 100%;
  }
  .input-1 {
    width: 90% !important;
  }
  .input-2 {
    width: 8% !important;
  }

  .msg-text {
    width: 170px !important;
    font-size: 12px;
  }
}
@media screen and (max-width: 1120px) {
  /* .live-chat-responsive {
    margin-top: 8px !important;
  } */
}
@media screen and (max-width: 1020px) {
  .input-1 {
    width: 90% !important;
  }
  .input-2 {
    width: 10% !important;
  }
  .live-chat-responsive {
    margin-top: 0px !important;
  }
  .live-chatr-footer {
    position: relative !important;
  }
}
@media screen and (max-width: 870px) {
  .main-banner-container {
    display: flex;
    flex-direction: column;
    width: 100% !important;
  }
  .banner-text-container {
    width: 100% !important;
    text-align: center !important;
    display: flex;
    flex-direction: column;
    justify-content: center !important;
    margin-bottom: 28px;
  }
  .banner-img-text {
    font-size: 42px !important;
    line-height: 60px !important;
  }
  .banner-para-text {
    font-size: 24px !important;
  }
  .banner-img {
    height: 480px !important;
    width: 100% !important;
    margin: auto;
  }
  .banner-btn {
    margin: auto !important;
    width: 350px !important;
  }
}
/* ... */

